added a cover page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-Hello World
+<!DOCTYPE html>
+
+	<head>
+	    <!-- Setup -->
+	    <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <title>Brett Stevens</title>
+
+	    <!-- Favicon -->
+	    <link rel="shortcut icon" href="./assets/images/favicon.png">
+
+	    <!-- Google Fonts -->
+	    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+
+	    <!-- Font Awesome -->
+	    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
+	    <!-- Bootstrap -->
+    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+    	<!-- Animate.css -->
+    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
+	    <!-- Custom CSS -->
+	    <link rel="stylesheet" href="./assets/css/style.css">
+	</head>
+
+	<body>
+		<header>
+		</header>
+		<main>
+			<div class="cover centered">
+				<div class="container">
+					<div class="row" style="padding-bottom:30px">
+						<div class="col-lg-12 text-center">
+							<img class="picture-of-me" src="assets/images/me.png" alt="me">
+						</div>
+					</div>
+					<div class="row" style="padding-bottom:70px">
+						<div class="col-lg-12 text-center">
+							<img class="my-name" src="assets/images/brettstevens.png" alt="my-name">
+						</div>
+					</div>
+					<div class="row" style="padding-bottom:10px">
+						<div class="col-lg-12 text-center">
+			                <a href="https://medium.com/@brettmstevens" class="icon"><i class="fab fa-medium-m grow-icon" aria-hidden="true"></i></a>
+			                <a href="https://www.instagram.com/brettmstevens/" class="icon"><i class="fab fa-instagram grow-icon" aria-hidden="true"></i></a>
+			                <a href="https://github.com/brettmstevens7" class="icon"><i class="fab fa-github grow-icon" aria-hidden="true"></i></a>
+			            </div>
+	            	</div>
+	            	<div class="row">
+						<div class="col-lg-12 text-center">
+			        		<p>brettmstevens7 at gmail dot com</p>
+			            </div>
+	            	</div>
+				</div>
+	        </div>
+		</main>
+		<footer>
+		</footer>
+
+		<!-- JQuery -->
+		<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+		<!-- JQuery Easing Plugin -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js" crossorigin="anonymous"></script>
+
+		<!-- Popper -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+
+		<!-- Bootstrap JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+	</body>
+
+</html>
